--- a/feature-home/build.gradle
+++ b/feature-home/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     implementation project(":router")
+    implementation project(":ui-shared")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
