--- a/feature-cardeditor/build.gradle
+++ b/feature-cardeditor/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation project(":router")
     implementation project(":ui-shared")
 
