--- a/feature-home/build.gradle
+++ b/feature-home/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation project(":router")
     implementation project(":ui-shared")
 
