--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,6 +27,9 @@ android {
         }
     }
 
+    buildFeatures {
+        compose true
+    }
 }
 
 dependencies {
@@ -35,6 +38,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
+
+    implementation "androidx.ui:ui-foundation:$androidx_ui_version"
+    implementation "androidx.ui:ui-framework:$androidx_ui_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
