--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation project(":core")
     implementation project(":router")
     implementation project(':feature-home')
-    implementation project(':feature-cardeditor')
+    implementation project(':feature-carddesigner')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
