--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,8 +36,12 @@ dependencies {
     implementation project(":router")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
+
+    implementation("com.squareup.moshi:moshi:1.9.2")
+    implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
 
     implementation "androidx.ui:ui-foundation:$androidx_ui_version"
     implementation "androidx.ui:ui-framework:$androidx_ui_version"
