--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     ext.kotlin_version = '1.3.61'
     ext.kotlinx_coroutines_version = '1.3.0'
     ext.androidx_ui_version = '0.+'
+    ext.room_version = "2.2.3"
+
     repositories {
         google()
         jcenter()
