--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     ext.build_tools = '4.0.0-alpha08'
     ext.kotlin_version = '1.3.61'
-    ext.kotlinx_coroutines_version = '1.3.0'
+    ext.kotlinx_coroutines_version = '1.3.2'
     ext.androidx_ui_version = '0.+'
     ext.room_version = "2.2.3"
+    ext.ktx_viewmodel_version = "2.2.0-rc03"
 
     repositories {
         google()
