--- a/feature-carddesigner/build.gradle
+++ b/feature-carddesigner/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation "androidx.ui:ui-tooling:$androidx_ui_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktx_viewmodel_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
