--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     implementation "androidx.ui:ui-foundation:$androidx_ui_version"
     implementation "androidx.ui:ui-framework:$androidx_ui_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
 
     implementation "androidx.room:room-runtime:$room_version"
 
