--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
     buildFeatures {
         compose true
     }
-
+    composeOptions {
+        kotlinCompilerExtensionVersion "$compose_version"
+    }
 }
 
 dependencies {
@@ -44,12 +51,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "androidx.ui:ui-foundation:$androidx_ui_version"
-    implementation "androidx.ui:ui-framework:$androidx_ui_version"
-    implementation "androidx.ui:ui-layout:$androidx_ui_version"
-    implementation "androidx.ui:ui-material:$androidx_ui_version"
-    implementation "androidx.ui:ui-tooling:$androidx_ui_version"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
+    implementation "androidx.compose:compose-compiler:$compose_version"
+    implementation "androidx.compose:compose-runtime:$compose_version"
+    implementation "androidx.ui:ui-foundation:$compose_ui_version"
+    implementation "androidx.ui:ui-framework:$compose_ui_version"
+    implementation "androidx.ui:ui-layout:$compose_ui_version"
+    implementation "androidx.ui:ui-material:$compose_ui_version"
+    implementation "androidx.ui:ui-tooling:$compose_ui_version"
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
 
