--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.build_tools = '4.0.0-alpha08'
+    ext.build_tools = '4.0.0-alpha09'
     ext.kotlin_version = '1.3.61'
     ext.kotlinx_coroutines_version = '1.3.2'
-    ext.androidx_ui_version = '0.+'
+    ext.compose_version = '0.1.0-dev04'
+    ext.compose_ui_version = '0.1.0-dev04'
     ext.room_version = "2.2.3"
     ext.ktx_viewmodel_version = "2.2.0-rc03"
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${build_tools}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -25,7 +25,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url 'https://ci.android.com/builds/submitted/6162746/androidx_snapshot/latest/ui/repository/' }
     }
 }
 
