--- a/feature-home/build.gradle
+++ b/feature-home/build.gradle
@@ -27,13 +27,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
     buildFeatures {
         compose true
     }
-
+    composeOptions {
+        kotlinCompilerExtensionVersion "$compose_version"
+    }
 }
 
 dependencies {
@@ -44,11 +48,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "androidx.ui:ui-foundation:$androidx_ui_version"
-    implementation "androidx.ui:ui-framework:$androidx_ui_version"
-    implementation "androidx.ui:ui-layout:$androidx_ui_version"
-    implementation "androidx.ui:ui-material:$androidx_ui_version"
-    implementation "androidx.ui:ui-tooling:$androidx_ui_version"
+
+    implementation "androidx.compose:compose-compiler:$compose_version"
+    implementation "androidx.compose:compose-runtime:$compose_version"
+    implementation "androidx.ui:ui-foundation:$compose_ui_version"
+    implementation "androidx.ui:ui-framework:$compose_ui_version"
+    implementation "androidx.ui:ui-layout:$compose_ui_version"
+    implementation "androidx.ui:ui-material:$compose_ui_version"
+    implementation "androidx.ui:ui-tooling:$compose_ui_version"
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktx_viewmodel_version"
