--- a/ui-shared/build.gradle
+++ b/ui-shared/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation "androidx.ui:ui-material:$compose_ui_version"
     implementation "androidx.ui:ui-tooling:$compose_ui_version"
 
+    api "com.github.fluxtah:music:$music_version"
+    api "com.github.fluxtah:pianoroll:$pianoroll_version"
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
 
