basic fretboard integration

--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,10 @@ buildscript {
     ext.compose_version = '0.1.0-dev04'
     ext.compose_ui_version = '0.1.0-dev04'
     ext.room_version = "2.2.3"
-    ext.ktx_viewmodel_version = "2.2.0-rc03"
+    ext.ktx_viewmodel_version = "2.2.0"
     ext.music_version = "0.1.0"
     ext.pianoroll_version = "0.1.43"
+    ext.fretboard_version = "0.1.46"
 
     repositories {
         google()
