--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.build_tools = '4.0.0-alpha09'
     ext.kotlin_version = '1.3.61'
     ext.kotlinx_coroutines_version = '1.3.2'
+    ext.compose_experimental_kotlin_compiler_version = '1.3.61-dev-withExperimentalGoogleExtensions-20200129'
     ext.compose_version = '0.1.0-dev05'
     ext.compose_ui_version = '0.1.0-dev05'
     ext.room_version = "2.2.3"
