--- a/feature-home/build.gradle
+++ b/feature-home/build.gradle
@@ -36,6 +36,7 @@ android {
         compose true
     }
     composeOptions {
+        kotlinCompilerVersion "$compose_experimental_kotlin_compiler_version"
         kotlinCompilerExtensionVersion "$compose_version"
     }
 }
