--- a/ui-shared/build.gradle
+++ b/ui-shared/build.gradle
@@ -33,6 +33,7 @@ android {
         compose true
     }
     composeOptions {
+        kotlinCompilerVersion "$compose_experimental_kotlin_compiler_version"
         kotlinCompilerExtensionVersion "$compose_version"
     }
 }
