fix fretboard selections

--- a/ui-shared/build.gradle
+++ b/ui-shared/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "androidx.compose:compose-compiler:$compose_version"
     implementation "androidx.compose:compose-runtime:$compose_version"
     implementation "androidx.ui:ui-foundation:$compose_ui_version"
+    implementation "androidx.ui:ui-core:$compose_ui_version"
     implementation "androidx.ui:ui-framework:$compose_ui_version"
     implementation "androidx.ui:ui-layout:$compose_ui_version"
     implementation "androidx.ui:ui-material:$compose_ui_version"
@@ -60,6 +61,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
+    implementation 'androidx.print:print:1.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
