--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.build_tools = '4.0.0-alpha09'
+    ext.build_tools = '4.0.0-beta01'
     ext.kotlin_version = '1.3.61'
     ext.kotlinx_coroutines_version = '1.3.2'
     ext.compose_experimental_kotlin_compiler_version = '1.3.61-dev-withExperimentalGoogleExtensions-20200129'
-    ext.compose_version = '0.1.0-dev05'
-    ext.compose_ui_version = '0.1.0-dev05'
+    ext.compose_version = '0.1.0-dev06'
+    ext.compose_ui_version = '0.1.0-dev06'
     ext.room_version = "2.2.3"
     ext.ktx_viewmodel_version = "2.2.0"
     ext.music_version = "0.1.0"
-    ext.pianoroll_version = "0.1.5"
-    ext.fretboard_version = "0.1.51"
+    ext.pianoroll_version = "0.1.60"
+    ext.fretboard_version = "0.1.60"
 
     repositories {
         google()
@@ -20,7 +20,7 @@ buildscript {
         
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${build_tools}"
+        classpath "com.android.tools.build:gradle:$build_tools"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
